samples/_failures_safe/1761315238_223ee0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71553c5e.c: In function ‘main’:
./samples/SAFE/__tmp_71553c5e.c:156:5: error: expected expression at end of input
  156 |     if (fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_71553c5e.c:156:5: error: expected declaration or statement at end of input
